--- a/mycontent/index.html
+++ b/mycontent/index.html
@@ -69,7 +69,6 @@
         <div class="sidebar">
             <img src="../data/img/logo.png" alt="Logo">
             <h2>Мой контент</h2>
-            <button class="access-btn" onclick="window.open('https://t.me/bratiskas_bot', '_blank')">Получить доступ к контенту</button>
             <div class="menu">
                 <ul>
                     <li><button type="button" onclick="showHome()" style="color:#ecf0f1;text-align:left;width:100%;padding:10px;">Главная</button></li>
@@ -116,7 +115,7 @@
             </div>
             <div class="section-block">
                 <h3>🔧 Подготовка</h3>
-                <p>Подготовьтесь к игре! Здесь вы найдете три видео: "Предвкушение и надежда" – ожидание перед стартом, "Первый запуск и настройка" – установка и настройка, "Первый взгляд" – первое впечатление от игры. 🚀</p>
+                <p>Подготовьтесь к игре! Здесь вы найдете полезные материалы: <a href="https://boosty.to/hgo/posts/372cfa76-00b0-4958-bd31-9bd9276c30e1">предвскушение и ожидание</a> и <a href="https://boosty.to/hgo/posts/ac192092-4107-430c-8997-084f7df3a782">Что делать до выхода HYTALE</a>. 🚀</p>
             </div>
             <div class="section-block">
                 <h3>📚 Уроки</h3>
@@ -141,26 +140,18 @@
                 <h2>Подготовка</h2>
                 <div class="video-panels">
                     <div class="video-panel">
-                        <iframe src="https://rutube.ru/embed/example-anticipation" allowfullscreen></iframe>
+                        <a href="https://boosty.to/hgo/posts/372cfa76-00b0-4958-bd31-9bd9276c30e1" target="_blank"><img src="img/001.png" alt="предвскушение и ожидание" style="width:100%;height:250px;border-radius:10px;"></a>
                         <div class="panel-info">
-                            <h3>Предвкушение и надежда</h3>
-                            <p>Описание: Мои ожидания перед началом игры.</p>
+                            <h3>Предвкушение и ожидание</h3>
+                            <p>Мои ожидания перед началом игры.</p>
                             <p class="author">Автор: HGO</p>
                         </div>
                     </div>
                     <div class="video-panel">
-                        <iframe src="https://rutube.ru/embed/example-launch" allowfullscreen></iframe>
+                        <a href="https://boosty.to/hgo/posts/ac192092-4107-430c-8997-084f7df3a782" target="_blank"><img src="img/002.png" alt="Что делать до выхода HYTALE" style="width:100%;height:250px;border-radius:10px;"></a>
                         <div class="panel-info">
-                            <h3>Первый запуск и настройка</h3>
-                            <p>Описание: Установка и первые настройки.</p>
-                            <p class="author">Автор: HGO</p>
-                        </div>
-                    </div>
-                    <div class="video-panel">
-                        <iframe src="https://rutube.ru/embed/example-look" allowfullscreen></iframe>
-                        <div class="panel-info">
-                            <h3>Первый взгляд</h3>
-                            <p>Описание: Первое впечатление от интерфейса и мира.</p>
+                            <h3>Что делать до выхода HYTALE</h3>
+                            <p>Полезные советы перед запуском игры.</p>
                             <p class="author">Автор: HGO</p>
                         </div>
                     </div>
@@ -168,117 +159,34 @@
             </div>
             <div id="stupid-as-teapot" class="video-content">
                 <h2>Уроки - тупой как чайник</h2>
-                <iframe src="https://rutube.ru/embed/example1" allowfullscreen></iframe>
             </div>
             <div id="first-steps" class="video-content">
                 <h2>Уроки - Первые шаги</h2>
-                <iframe src="https://rutube.ru/embed/example2" allowfullscreen></iframe>
             </div>
             <div id="first-emotions" class="video-content">
                 <h2>Летсплей - первые эмоции</h2>
-                <div class="video-panels">
-                    <div class="video-panel">
-                        <iframe src="https://rutube.ru/embed/example3a" allowfullscreen></iframe>
-                        <div class="panel-info">
-                            <h3>Видео 1: Первые эмоции старта</h3>
-                            <p>Описание: Мои искренние реакции на начало одиночных сессий в Hytale.</p>
-                            <p class="author">Автор: HGO</p>
-                        </div>
-                    </div>
-                    <div class="video-panel">
-                        <iframe src="https://rutube.ru/embed/example3b" allowfullscreen></iframe>
-                        <div class="panel-info">
-                            <h3>Видео 2: Эмоции от открытий</h3>
-                            <p>Описание: Реакции на неожиданные находки и события в игре.</p>
-                            <p class="author">Автор: HGO</p>
-                        </div>
-                    </div>
-                    <div class="video-panel">
-                        <iframe src="https://rutube.ru/embed/example3c" allowfullscreen></iframe>
-                        <div class="panel-info">
-                            <h3>Видео 3: Финальные эмоции</h3>
-                            <p>Описание: Завершающие впечатления от одиночных приключений.</p>
-                            <p class="author">Автор: HGO</p>
-                        </div>
-                    </div>
-                </div>
             </div>
             <div id="random-mods" class="video-content">
                 <h2>Летсплей - Я прохожу рандомные моды</h2>
-                <div class="video-panels">
-                    <div class="video-panel">
-                        <iframe src="https://rutube.ru/embed/example4a" allowfullscreen></iframe>
-                        <div class="panel-info">
-                            <h3>Видео 1: Рандомный мод 1</h3>
-                            <p>Описание: Прохождение случайного мода с хаосом и весельем.</p>
-                            <p class="author">Автор: HGO</p>
-                        </div>
-                    </div>
-                    <div class="video-panel">
-                        <iframe src="https://rutube.ru/embed/example4b" allowfullscreen></iframe>
-                        <div class="panel-info">
-                            <h3>Видео 2: Рандомный мод 2</h3>
-                            <p>Описание: Еще одно непредсказуемое приключение с модами.</p>
-                            <p class="author">Автор: HGO</p>
-                        </div>
-                    </div>
-                    <div class="video-panel">
-                        <iframe src="https://rutube.ru/embed/example4c" allowfullscreen></iframe>
-                        <div class="panel-info">
-                            <h3>Видео 3: Рандомный мод 3</h3>
-                            <p>Описание: Финальное прохождение рандомного мода.</p>
-                            <p class="author">Автор: HGO</p>
-                        </div>
-                    </div>
-                </div>
             </div>
             <div id="community-mods" class="video-content">
                 <h2>Летсплей - Обзор модов от сообщества</h2>
-                <div class="video-panels">
-                    <div class="video-panel">
-                        <iframe src="https://rutube.ru/embed/example5a" allowfullscreen></iframe>
-                        <div class="panel-info">
-                            <h3>Видео 1: Обзор модов 1</h3>
-                            <p>Описание: Анализ лучших творений фанатов глазами одиночки.</p>
-                            <p class="author">Автор: HGO</p>
-                        </div>
-                    </div>
-                    <div class="video-panel">
-                        <iframe src="https://rutube.ru/embed/example5b" allowfullscreen></iframe>
-                        <div class="panel-info">
-                            <h3>Видео 2: Обзор модов 2</h3>
-                            <p>Описание: Продолжение обзоров модов от сообщества.</p>
-                            <p class="author">Автор: HGO</p>
-                        </div>
-                    </div>
-                    <div class="video-panel">
-                        <iframe src="https://rutube.ru/embed/example5c" allowfullscreen></iframe>
-                        <div class="panel-info">
-                            <h3>Видео 3: Обзор модов 3</h3>
-                            <p>Описание: Завершающий анализ модов от фанатов.</p>
-                            <p class="author">Автор: HGO</p>
-                        </div>
-                    </div>
-                </div>
             </div>
             <div id="humor-mods" class="video-content">
                 <h2>Супер модинг - юмор моды</h2>
-                <iframe src="https://rutube.ru/embed/example6" allowfullscreen></iframe>
             </div>
             <div id="stupid-teapot" class="video-content">
                 <h2>Супер модинг - тупой как чайник</h2>
-                <iframe src="https://rutube.ru/embed/example7" allowfullscreen></iframe>
             </div>
             <div id="dream-brushes" class="video-content">
                 <h2>Супер модинг - Кисти моей мечты</h2>
-                <iframe src="https://rutube.ru/embed/example8" allowfullscreen></iframe>
             </div>
             <div id="how-to-get-code" class="video-content">
                 <h2>Как получить доступ к контенту</h2>
                 <div class="instruction-blocks">
                     <div class="instruction-block">
-                        <h3>Инструкция по получению доступа</h3>
-                        <p>1. Нажмите кнопку "Получить доступ к контенту" в меню слева.<br>2. Перейдите в чат с ботом @bratiskas_bot в Telegram.<br>3. Следуйте инструкциям бота для получения доступа к контенту.</p>
+                        <h3>Инструкция по получению доступа к контенту</h3>
+                        <p>1. Выберите нужный пост в любом разделе сайта (например, в "Подготовка", "Уроки", "Летсплей" или "Супер модинг").<br>2. Кликните на изображение поста, чтобы перейти на его страницу на Boosty.<br>3. На странице поста нажмите кнопку "Купить пост" или "Оплатить доступ".<br>4. Выберите удобный способ оплаты (карта, QIWI, ЮMoney и др.) и завершите покупку.<br>5. После успешной оплаты вы получите полный доступ к контенту этого поста.<br>6. Если возникнут вопросы, обратитесь в поддержку Boosty.</p>
                     </div>
                 </div>
             </div>
