--- a/index.html
+++ b/index.html
@@ -111,7 +111,6 @@
                 <li><a href="#about">Об игре</a></li>
                 <li><a href="#screenshots">Скриншоты</a></li>
                 <li><a href="#videos">Видео</a></li>
-                <li class="download-menu"><a href="#download">Скачать игру</a></li>
                 <li><a href="mods/index.html">Моды</a></li>
                 <li><a href="mycontent/index.html">Мой контент</a></li>
             </ul>
@@ -134,6 +133,7 @@
         </div>
         <div class="image">
             <img src="data/img/logo.png" alt="Hytale Logo">
+            <a href="download/download.html" class="huge-download-btn-page">СКАЧАТЬ ЛАУНЧЕР</a>
         </div>
     </section>
 
@@ -345,58 +345,7 @@
             <source src="data/video/hytalestart.mp4" type="video/mp4">
             Ваш браузер не поддерживает видео.
         </video>
-        <p>Посмотрите официальный трейлер Hytale и погрузитесь в атмосферу!</p>
     </section>
-
-    <section id="download" class="download">
-        <h2>Скачать Hytale</h2>
-        <div class="tabs">
-            <div class="tab-buttons">
-                <button class="tab-btn active" data-tab="launcher">Лаунчер</button>
-                <button class="tab-btn" data-tab="direct">Прямая загрузка</button>
-            </div>
-            <div class="tab-content">
-                <div id="launcher" class="tab-pane active">
-                    <div class="download-card">
-                        <div class="card-icon large">🚀</div>
-                        <h3>Лаунчер Hytale</h3>
-                        <p>Рекомендуемый способ. Автоматические обновления и простая установка.</p>
-                        <a href="download/download.html" class="download-btn primary" id="download-launcher-btn">Скачать лаунчер</a>
-                    </div>
-                </div>
-                <div id="direct" class="tab-pane">
-                    <div class="download-card">
-                        <div class="card-icon large">💾</div>
-                        <h3>Прямая загрузка игры</h3>
-                        <p>Выберите операционную систему и разрядность.</p>
-                        <form id="direct-form" class="download-form">
-                            <div class="select-row">
-                                <div class="select-group">
-                                    <label for="os-select">ОС</label>
-                                    <select id="os-select" required>
-                                        <option value="" disabled selected>Выберите</option>
-                                        <option value="windows">Windows</option>
-                                        <option value="mac">macOS</option>
-                                        <option value="linux">Linux</option>
-                                    </select>
-                                </div>
-                                <div class="select-group">
-                                    <label for="arch-select">Разрядность</label>
-                                    <select id="arch-select" required disabled>
-                                        <option value="" disabled selected>Выберите</option>
-                                    </select>
-                                </div>
-                            </div>
-                            <button type="submit" class="download-btn primary" id="download-direct-btn" disabled>Скачать</button>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-
-
 
     <!-- Contest Modal -->
     <div id="contest-modal" class="contest-modal">
