--- a/mycontent/index.html
+++ b/mycontent/index.html
@@ -76,6 +76,7 @@
             </div>
             <div class="menu">
                 <ul>
+                    <li><button type="button" onclick="showContent('conversations')">Разговорчики</button></li>
                     <li><button type="button" onclick="showContent('preparation')">Подготовка</button></li>
                     <li><button type="button" onclick="toggleSubmenu('letsplay')">Летсплей</button>
                         <ul class="submenu" id="letsplay">
@@ -131,6 +132,20 @@
                 <h3>🛠️ Супер модинг</h3>
                 <p>Погрузитесь в захватывающий мир модинга! Здесь вы увидите, как творчество может преобразить игру. От юмористических модов, которые заставят вас смеяться до слез, до уроков модинга для новичков и амбициозных проектов вроде "Кисти моей мечты". Узнайте, как создавать свои моды и делиться ими с миром. 🎨🧪</p>
                 <p>Подразделы: "Юмор моды" – забавные и абсурдные модификации, "Новичок в модинге" – основы создания модов, "Кисти моей мечты" – творческие проекты и вдохновение. 💥</p>
+            </div>
+
+            <div id="conversations" class="video-content">
+                <h2>Разговорчики</h2>
+                <div class="video-panels">
+                    <div class="video-panel">
+                        <a href="https://boosty.to/hgo/posts/23c62d48-68a7-459b-8185-eaeac7754644" target="_blank"><img src="img/001.png" alt="Minecraft обсралась и она только для детей - Факты №1 в России" style="width:100%;height:250px;border-radius:10px;"></a>
+                        <div class="panel-info">
+                            <h3>Minecraft обсралась и она только для детей - Факты №1 в России</h3>
+                            <p>Интересные факты о Minecraft.</p>
+                            <p class="author">Автор: HGO</p>
+                        </div>
+                    </div>
+                </div>
             </div>
 
             <div id="preparation" class="video-content">
