--- a/index.html
+++ b/index.html
@@ -3,9 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <title>Hytale – Эпическая игра</title>
-    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <style>
+        /* Таймер */
+        .timer {
+            height: 60px;
+            width: 400px;
+            font-size: 16px;
+            font-weight: bold;
+            color: #ffffff;
+            padding: 8px 12px;
+            border-radius: 8px;
+            text-align: center;
+            background: linear-gradient(45deg, rgba(20, 20, 40, 0.95), rgba(40, 40, 60, 0.95));
+            border: 2px solid #ffd700;
+            box-shadow: 0 0 15px rgba(255, 215, 0, 0.4), inset 0 0 8px rgba(0, 0, 0, 0.3);
+            font-family: 'Courier New', monospace;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+            position: relative;
+            overflow: hidden;
+            margin-left: 20px;
+        }
+        .timer::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: url('data/img/sr/001.jpg') center/cover no-repeat;
+            opacity: 0.1;
+            z-index: -1;
+        }
+        .timer .block-decoration {
+            position: absolute;
+            width: 20px;
+            height: 20px;
+            background: linear-gradient(45deg, #8B4513, #A0522D);
+            border: 1px solid #654321;
+            border-radius: 2px;
+            box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+        }
+        .timer .block1 { top: 5px; left: 10px; }
+        .timer .block2 { top: 5px; right: 10px; }
+        .timer .block3 { bottom: 5px; left: 10px; }
+        .timer .block4 { bottom: 5px; right: 10px; }
+
+        .timer span {
+            display: inline-block;
+            margin: 0 1px;
+            font-size: 16px;
+            font-weight: bolder;
+            color: #ffff00; /* золотой для чисел */
+        }
+
+
+
         /* Анимация для чисел в таймерах */
         .timer span.flip {
             animation: numberFlip 0.5s ease-in-out;
@@ -87,40 +143,33 @@
                 font-size: 16px;
             }
         }
-
-        .timer span {
-            display: inline-block;
-            margin: 0 15px;
-            font-size: 16px;
-            font-weight: bolder;
-            color: #ffff00;
-        }
     </style>
 </head>
 <body>
-    <div id="release-timer" class="timer release-timer timer-fixed">
-        <div class="timer-text">
-            <div style="margin-bottom: 10px;">До выхода игры осталось:</div>
-            <div><span id="release-days"></span>:<span id="release-hours"></span>:<span id="release-minutes"></span>:<span id="release-seconds"></span></div>
-        </div>
-        <div class="sound-panel-timer">
-            <button id="play-sound-btn" class="sound-btn-timer">НАЖМИ</button>
-        </div>
-    </div>
-
-    <div class="sidebar">
-        <div class="logo-centered"><img src="data/img/logo.png" alt="Hytale Logo"></div>
+    <header class="header">
+        <div class="logo"><img src="data/img/logo.png" alt="Hytale Logo"></div>
         <nav>
             <ul>
                 <li><a href="#home">Главная</a></li>
                 <li><a href="#about">Об игре</a></li>
                 <li><a href="#screenshots">Скриншоты</a></li>
                 <li><a href="#videos">Видео</a></li>
-                <li><a href="mods/index.html">Моды</a></li>
-                <li><a href="mycontent/index.html">Мой контент</a></li>
+                <li class="dropdown">
+                    <a href="#">Дополнительно</a>
+                    <ul class="dropdown-menu">
+                        <li><a href="mods/index.html">Моды</a></li>
+                        <li><a href="mycontent/index.html">Мой контент</a></li>
+                    </ul>
+                </li>
+                <li class="download-menu"><a href="#download">Скачать игру</a></li>
+
             </ul>
         </nav>
-    </div>
+        <div id="release-timer" class="timer release-timer">
+            <div>До выхода игры осталось:</div>
+            <div><span id="release-days"></span>:<span id="release-hours"></span>:<span id="release-minutes"></span>:<span id="release-seconds"></span></div>
+        </div>
+    </header>
 
     <section id="home" class="hero">
         <div class="contest-panel">
@@ -138,7 +187,6 @@
         </div>
         <div class="image">
             <img src="data/img/logo.png" alt="Hytale Logo">
-            <a href="download/download.html" class="huge-download-btn-page">СКАЧАТЬ ЛАУНЧЕР</a>
         </div>
     </section>
 
@@ -223,8 +271,8 @@
                         </div>
                         <div class="feature-card">
                             <span class="icon">🌍</span>
-                            <h4>Мультиплеер</h4>
-                            <p>Играйте с друзьями онлайн. Мультиплеер до 64 игроков.</p>
+                            <h4>Мультиплатформенность</h4>
+                            <p>Играйте на PC, консолях и мобильных. Ваша игра везде с вами.</p>
                         </div>
                     </div>
                 </div>
@@ -350,7 +398,58 @@
             <source src="data/video/hytalestart.mp4" type="video/mp4">
             Ваш браузер не поддерживает видео.
         </video>
+        <p>Посмотрите официальный трейлер Hytale и погрузитесь в атмосферу!</p>
     </section>
+
+    <section id="download" class="download">
+        <h2>Скачать Hytale</h2>
+        <div class="tabs">
+            <div class="tab-buttons">
+                <button class="tab-btn active" data-tab="launcher">Лаунчер</button>
+                <button class="tab-btn" data-tab="direct">Прямая загрузка</button>
+            </div>
+            <div class="tab-content">
+                <div id="launcher" class="tab-pane active">
+                    <div class="download-card">
+                        <div class="card-icon large">🚀</div>
+                        <h3>Лаунчер Hytale</h3>
+                        <p>Рекомендуемый способ. Автоматические обновления и простая установка.</p>
+                        <a href="download/download.html" class="download-btn primary" id="download-launcher-btn">Скачать лаунчер</a>
+                    </div>
+                </div>
+                <div id="direct" class="tab-pane">
+                    <div class="download-card">
+                        <div class="card-icon large">💾</div>
+                        <h3>Прямая загрузка игры</h3>
+                        <p>Выберите операционную систему и разрядность.</p>
+                        <form id="direct-form" class="download-form">
+                            <div class="select-row">
+                                <div class="select-group">
+                                    <label for="os-select">ОС</label>
+                                    <select id="os-select" required>
+                                        <option value="" disabled selected>Выберите</option>
+                                        <option value="windows">Windows</option>
+                                        <option value="mac">macOS</option>
+                                        <option value="linux">Linux</option>
+                                    </select>
+                                </div>
+                                <div class="select-group">
+                                    <label for="arch-select">Разрядность</label>
+                                    <select id="arch-select" required disabled>
+                                        <option value="" disabled selected>Выберите</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <button type="submit" class="download-btn primary" id="download-direct-btn" disabled>Скачать</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
 
     <!-- Contest Modal -->
     <div id="contest-modal" class="contest-modal">
@@ -374,12 +473,7 @@
 
 
     <div id="snow-container"></div>
-    <audio id="bg-sound">
-        <source src="data/oh.wav" type="audio/wav">
-        Ваш браузер не поддерживает аудио.
-    </audio>
     <script src="script.js"></script>
-</body>
-</html>
+    <script src="popup.js"></script>
 </body>
 </html>
