--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+b <!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
@@ -132,9 +132,6 @@
             </div>
         </div>
         <div class="content">
-            <h1>Добро пожаловать в Hytale!</h1>
-            <p>Погрузитесь в эпический фэнтезийный мир и станьте героями своего времени. Исследуйте подземелья, стройте крепости и сражайтесь с друзьями в уникальном мире блоков!</p>
-            <button class="cta">Узнать больше</button>
         </div>
         <div class="image">
             <img src="data/img/logo.png" alt="Hytale Logo">
