--- a/mobile-error.html
+++ b/mobile-error.html
@@ -3,27 +3,90 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Дизайнерская ошибка</title>
+    <title>Hytale – Дизайнерская ошибка</title>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+        html, body {
+            height: 100%;
+            font-family: 'Press Start 2P', monospace;
+            font-size: 0.8rem;
+            color: #e0e0e0;
+        }
+        img {
+            image-rendering: pixelated;
+        }
         body {
-            font-family: Arial, sans-serif;
-            background: #f0f0f0;
-            color: #333;
+            background: linear-gradient(135deg, #1e3c72 0%, #2a5298 100%);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            padding: 2rem;
+        }
+        .error-container {
+            background: linear-gradient(135deg, #1e1e1e, #2c3e50);
+            border: 4px outset #555;
+            border-radius: 20px;
+            padding: 3rem 2rem;
+            box-shadow: 0 0 50px rgba(52, 152, 219, 0.7);
             text-align: center;
-            padding: 50px;
+            max-width: 600px;
+            width: 100%;
+        }
+        .logo {
+            width: 200px;
+            height: auto;
+            margin-bottom: 2rem;
+            filter: drop-shadow(2px 2px 4px rgba(0,0,0,0.5));
         }
         h1 {
-            color: #ff0000;
-            font-size: 3em;
+            color: #ff4444;
+            font-size: 1.5rem;
+            margin-bottom: 1.5rem;
+            text-shadow: 2px 2px 0px #000;
         }
         p {
-            font-size: 1.2em;
+            font-size: 0.7rem;
+            line-height: 1.6;
+            margin-bottom: 1rem;
+            color: #bdc3c7;
+        }
+        .warning-icon {
+            font-size: 3rem;
+            margin-bottom: 1rem;
+        }
+        .back-link {
+            display: inline-block;
+            background: linear-gradient(45deg, #3498db, #2980b9);
+            color: white;
+            padding: 1rem 2rem;
+            border-radius: 10px;
+            text-decoration: none;
+            font-size: 0.6rem;
+            margin-top: 2rem;
+            box-shadow: 0 4px 15px rgba(52, 152, 219, 0.4);
+            transition: all 0.3s ease;
+        }
+        .back-link:hover {
+            transform: scale(1.05);
+            box-shadow: 0 6px 20px rgba(52, 152, 219, 0.6);
         }
     </style>
 </head>
 <body>
-    <h1>Дизайнерская ошибка</h1>
-    <p>Сайт не оптимизирован для мобильных устройств.</p>
-    <p>Пожалуйста, используйте десктопную версию.</p>
+    <div class="error-container">
+        <img src="data/img/logo.png" alt="Hytale Logo" class="logo">
+        <div class="warning-icon">⚠️</div>
+        <h1>ДИЗАЙНЕРСКАЯ ОШИБКА</h1>
+        <p>Сайт не оптимизирован для мобильных устройств.</p>
+        <p>Пожалуйста, используйте десктопную версию для лучшего опыта.</p>
+        <p>Мы работаем над мобильной версией!</p>
+        <a href="javascript:history.back()" class="back-link">НАЗАД</a>
+    </div>
 </body>
 </html>
