--- a/mobile-error.html
+++ b/mobile-error.html
@@ -33,10 +33,11 @@
             border: 4px outset #555;
             border-radius: 20px;
             padding: 3rem 2rem;
-            box-shadow: 0 0 50px rgba(52, 152, 219, 0.7);
+            box-shadow: 0 0 50px rgba(52, 152, 219, 0.7), 0 0 100px rgba(255, 255, 255, 0.1);
             text-align: center;
             max-width: 600px;
             width: 100%;
+            margin-top: -4rem;
         }
         .logo {
             width: 200px;
