--- a/mobile-error.html
+++ b/mobile-error.html
@@ -79,7 +79,10 @@
         }
 
         /* Mobile optimizations */
-        @media (max-width: 480px) {
+        @media (max-width: 768px) {
+            body {
+                overflow: hidden;
+            }
             .error-container {
                 padding: 2rem 1rem;
             }
