--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ b <!DOCTYPE html>
         </div>
         <div class="image">
             <img src="data/img/logo.png" alt="Hytale Logo">
-            <a href="download/download.html" class="huge-download-btn-page">СКАЧАТЬ ЛАУНЧЕР</a>
+            <a href="download/download.html" class="huge-download-btn-page" style="pointer-events: auto; z-index: 10001;">СКАЧАТЬ ЛАУНЧЕР</a>
         </div>
     </section>
 
@@ -376,8 +376,8 @@ b <!DOCTYPE html>
         <source src="data/oh.wav" type="audio/wav">
         Ваш браузер не поддерживает аудио.
     </audio>
-    <script src="animation.js"></script>
     <script src="script.js"></script>
+    <script src="animation.js"></script>
 </body>
 </html>
 </body>
