--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@ b <!DOCTYPE html>
         Ваш браузер не поддерживает аудио.
     </audio>
     <script src="script.js"></script>
-    <script src="animation.js"></script>
+    <script src="animation.js?t=1"></script>
 </body>
 </html>
 </body>
