--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@ b <!DOCTYPE html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
     <title>Hytale – Эпическая игра</title>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
@@ -128,6 +131,7 @@ b <!DOCTYPE html>
 </header>
 
     <div class="sidebar">
+        <div class="sidebar-logo"><img src="data/img/logo.png" alt="Hytale Logo"></div>
         <nav>
             <ul>
                 <li><a href="#home">Главная</a></li>
@@ -377,7 +381,9 @@ b <!DOCTYPE html>
         Ваш браузер не поддерживает аудио.
     </audio>
     <script src="script.js"></script>
-    <script src="animation.js?t=1"></script>
+    <script src="animation.js?t=" + new Date().getTime()></script>
+
+    <script src="feedback.js"></script>
 </body>
 </html>
 </body>
