--- a/index.html
+++ b/index.html
@@ -380,10 +380,9 @@ b <!DOCTYPE html>
         <source src="data/oh.wav" type="audio/wav">
         Ваш браузер не поддерживает аудио.
     </audio>
+    <script src="//code.jivo.ru/widget/0wzzN2jWsq" async></script>
     <script src="script.js"></script>
     <script src="animation.js?t=" + new Date().getTime()></script>
-
-    <script src="feedback.js"></script>
 </body>
 </html>
 </body>
