--- a/index.html
+++ b/index.html
@@ -97,6 +97,13 @@ b <!DOCTYPE html>
     </style>
 </head>
 <body>
+    <div class="telegram-banner">
+        <div class="banner-content">
+            <p class="banner-text">🎉 ЭПИЧНЫЙ АНОНС! У нас появился новый Telegram канал конкурсов <a href="https://t.me/hgosss" target="_blank">@hgosss</a> - заходите и участвуйте! 🎉</p>
+            <button class="empty-shelf-btn" disabled>конкурс - пока не доступно</button>
+        </div>
+    </div>
+
     <div id="release-timer" class="timer release-timer timer-fixed">
         <div class="timer-text">
             <div style="margin-bottom: 10px;">До выхода игры осталось:</div>
