--- a/download/download.html
+++ b/download/download.html
@@ -288,186 +288,14 @@
 </head>
 <body>
     <div class="download-container">
-        <div class="download-icon">⬇️</div>
-        <h1>Скачать лаунчер</h1>
-        <p>Ура! Приключения начинаются! Готовьтесь к скачиванию легендарного лаунчера Hytale!</p>
-        <details class="instruction" style="margin-top: -1rem;">
-            <summary>Инструкция по установке (нажми чтобы раскрыть)</summary>
-            <p>1. Распаковать в любую папку (путь не должен иметь русский язык)</p>
-            <p>2. Запустить HytaleLauncherX.exe</p>
-            <p>3. Наслаждаться</p>
-        </details>
-        <div class="captcha">
-            <p id="captcha-instruction">Эпическая капча: Запомни число и введи его!</p>
-            <div class="captcha-display" id="captcha-display">123-456-789</div>
-            <input type="text" class="captcha-input" id="captcha-input" placeholder="XXX-XXX-XXX">
-            <p class="timer">Число изменится через: 9 сек</p>
-        </div>
-        <a href="l.zip" class="download-btn" id="download-btn">Скачать лаунчер</a>
+        <div class="download-icon">⚠️</div>
+        <h1>Важное объявление</h1>
+        <p>Дорогие друзья и поклонники Hytale!</p>
+        <p>К сожалению, мы вынуждены сообщить вам о важных изменениях в нашем проекте. В связи с текущими обстоятельствами и стремлением к соблюдению авторских прав, мы приняли решение прекратить распространение игрового контента и файлов, связанных с Hytale. Это шаг, направленный на поддержку оригинальных разработчиков и сохранение духа творчества в игровом сообществе.</p>
+        <p>Мы всегда были против пиратства и нелегального распространения программного обеспечения. Пиратство не только нарушает законы, но и подрывает усилия создателей игр, которые вкладывают годы труда в разработку увлекательных миров. Мы верим, что истинные фанаты игры должны поддерживать официальные релизы и платформы, чтобы обеспечить продолжение развития и создание новых приключений.</p>
+        <p>Однако это не конец! В ближайшем будущем мы планируем запустить совершенно новый проект, вдохновленный Hytale, но полностью независимый от оригинальной игры. Этот проект будет сосредоточен на креативных идеях, сообществе и новых способах взаимодействия, без каких-либо ссылок на скачивание или распространение файлов. Мы будем работать над созданием уникального опыта, который порадует всех любителей приключений и фантазии.</p>
+        <p>Следите за нашими обновлениями! Мы скоро поделимся больше деталями о новом проекте, включая концепции, идеи и сроки запуска. Ваша поддержка и интерес мотивируют нас двигаться вперед и создавать что-то особенное.</p>
+        <p>Спасибо за понимание и за то, что вы были частью нашего сообщества. Вместе мы создадим что-то удивительное!</p>
     </div>
-    <script>
-        // Анимация появления
-        document.querySelector('.download-container').style.animation = 'anim1 1s ease';
-
-        const downloadBtn = document.getElementById('download-btn');
-        const captchaDisplay = document.getElementById('captcha-display');
-        const captchaInput = document.getElementById('captcha-input');
-        const timerText = document.querySelector('.timer');
-
-        let timer = 20;
-        let solved = false;
-        let currentNumber = '';
-        let audioContext;
-        let pulseInterval;
-        let lastBeatTime = 0;
-
-        function initAudio() {
-            audioContext = new (window.AudioContext || window.webkitAudioContext)();
-            if (audioContext.state === 'suspended') {
-                audioContext.resume();
-            }
-        }
-        // Initialize audio on first interaction
-        document.addEventListener('click', () => {
-            if (!audioContext) {
-                initAudio();
-            } else if (audioContext.state === 'suspended') {
-                audioContext.resume();
-            }
-        }, { once: true });
-
-        function playBeep(frequency = 800, duration = 200) {
-            if (!audioContext) return;
-            if (audioContext.state === 'suspended') {
-                audioContext.resume();
-            }
-            const oscillator = audioContext.createOscillator();
-            const gainNode = audioContext.createGain();
-
-            oscillator.connect(gainNode);
-            gainNode.connect(audioContext.destination);
-
-            oscillator.frequency.setValueAtTime(frequency, audioContext.currentTime);
-            oscillator.type = 'sine';
-
-            gainNode.gain.setValueAtTime(0.3, audioContext.currentTime);
-            gainNode.gain.exponentialRampToValueAtTime(0.01, audioContext.currentTime + duration / 1000);
-
-            oscillator.start(audioContext.currentTime);
-            oscillator.stop(audioContext.currentTime + duration / 1000);
-        }
-
-        function generateNumber() {
-            // Generate 9-digit number
-            let num = '';
-            for (let i = 0; i < 9; i++) {
-                num += Math.floor(Math.random() * 10);
-            }
-            // Format as XXX-XXX-XXX
-            currentNumber = num.replace(/(\d{3})(\d{3})(\d{3})/, '$1-$2-$3');
-            captchaDisplay.textContent = currentNumber;
-            captchaDisplay.style.color = '#ffd700'; // Reset to yellow
-            captchaDisplay.style.animation = 'numberGlow 2s infinite alternate'; // Reset animation
-            captchaInput.value = '';
-            solved = false;
-            downloadBtn.classList.remove('enabled');
-            timer = 20;
-            lastBeatTime = Date.now();
-            updateTimer();
-        }
-
-        function updateTimer() {
-            timerText.textContent = `Число изменится через: ${timer} сек`;
-
-            if (timer <= 10 && timer > 0 && !solved) {
-                startPulseSound();
-            } else {
-                stopPulseSound();
-            }
-
-            if (timer > 0) {
-                timer--;
-                setTimeout(updateTimer, 1000);
-            } else {
-                stopPulseSound();
-                generateNumber();
-            }
-        }
-
-        function startPulseSound() {
-            if (pulseInterval) return; // Already running
-
-            const pulseStartTime = Date.now();
-            lastBeatTime = pulseStartTime;
-
-            pulseInterval = setInterval(() => {
-                const now = Date.now();
-                const totalElapsed = now - pulseStartTime; // Total time since pulse started
-
-                // Wait 1 second for first beat
-                if (totalElapsed < 1000) return;
-
-                const accelerationTime = totalElapsed - 1000; // Time after first second
-                const progress = Math.min(1, accelerationTime / 7000); // 0 to 1 over 7 seconds
-                const interval = 1000 - progress * 900; // From 1000ms to 100ms
-                const frequency = 600 + progress * 600; // From 600 to 1200 Hz
-
-                if (now - lastBeatTime >= interval) {
-                    playBeep(frequency, 150);
-                    lastBeatTime = now;
-                }
-            }, 10); // Check every 10ms for smooth timing
-        }
-
-        function stopPulseSound() {
-            if (pulseInterval) {
-                clearInterval(pulseInterval);
-                pulseInterval = null;
-            }
-        }
-
-        // Prevent copying and context menu on captcha display
-        captchaDisplay.addEventListener('contextmenu', (e) => e.preventDefault());
-        captchaDisplay.addEventListener('copy', (e) => e.preventDefault());
-        captchaDisplay.addEventListener('cut', (e) => e.preventDefault());
-        captchaDisplay.addEventListener('paste', (e) => e.preventDefault());
-        captchaDisplay.addEventListener('selectstart', (e) => e.preventDefault());
-
-        // Initialize audio on first interaction
-        document.addEventListener('click', () => {
-            if (!audioContext) {
-                initAudio();
-            }
-        }, { once: true });
-
-        // Input listener
-        captchaInput.addEventListener('input', () => {
-            if (solved) return;
-
-            let input = captchaInput.value.replace(/\D/g, ''); // Remove non-digits
-            // Format input
-            if (input.length > 9) input = input.slice(0, 9);
-            if (input.length >= 3) {
-                input = input.replace(/(\d{3})(\d{0,3})(\d{0,3})/, '$1-$2-$3').replace(/-$/, '');
-            }
-            captchaInput.value = input;
-
-            if (input === currentNumber) {
-                solved = true;
-                downloadBtn.classList.add('enabled');
-                timerText.textContent = 'Капча решена! Скачивание доступно.';
-                captchaDisplay.style.animation = 'none';
-                captchaDisplay.style.color = '#4CAF50';
-            }
-        });
-
-        // Initialize audio immediately
-        initAudio();
-
-        // Spoiler without animation
-
-        // Инициализация
-        generateNumber();
-    </script>
 </body>
 </html>
